--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^8.0.1",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
+    "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
