--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-select": "^3.1.1",
     "request": "^2.88.2",
     "web-vitals": "^0.2.4"
   },
