--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^8.2.0",
     "firebase": "^8.0.1",
     "jquery": "^3.5.1",
+    "list-react-files": "^0.2.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
