--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
+  "homepage": "alpha.common.gg",
   "name": "commongg",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.6.0",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.1",
-    "@testing-library/user-event": "^12.2.0",
-    "axios": "^0.21.0",
-    "axios-react": "^2.0.2",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
-    "firebase": "^8.0.1",
+    "firebase": "^8.2.1",
     "jquery": "^3.5.1",
-    "list-react-files": "^0.2.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.1",
     "react-select": "^3.1.1",
     "request": "^2.88.2",
+    "typeface-overpass": "^1.1.13",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
