--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
     "firebase": "^8.2.1",
+    "fontsource-overpass": "^4.0.0",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
