--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "bad-words": "^3.0.4",
     "bootstrap": "^4.5.3",
     "compress.js": "^1.1.2",
     "dotenv": "^8.2.0",
