--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "^17.0.1",
+    "react-linkify": "^1.0.0-alpha",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
