--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "^17.0.1",
     "react-linkify": "^1.0.0-alpha",
+    "react-on-screen": "^2.1.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
