--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-select": "^3.1.1",
+    "react-twitch-embed": "^2.1.0",
     "request": "^2.88.2",
     "typeface-overpass": "^1.1.13",
     "web-vitals": "^0.2.4"
