--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "^4.0.1",
     "react-select": "^3.1.1",
     "react-tiny-link": "^3.6.0",
+    "react-twitch-embed": "^2.1.0",
     "request": "^2.88.2",
     "typeface-overpass": "^1.1.13",
     "web-vitals": "^0.2.4"
