--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-REACT_APP_apiKey="AIzaSyD1jQYyXXCkXnq1l56ssnYxM-CwnqcrxY0"
-REACT_APP_authDomain="common-gg.firebaseapp.com"
-REACT_APP_databaseURL="https://common-gg-default-rtdb.firebaseio.com"
-REACT_APP_projectId="common-gg"
-REACT_APP_storageBucket="common-gg.appspot.com"
-REACT_APP_messagingSenderId="666355890231"
-REACT_APP_appId="1:666355890231:web:85a63f69ecd659e94a67b2"
-REACT_APP_measurementId="G-JK7WJN2ZHL"
+REACT_APP_apiKey="AIzaSyApfaVNBr9zAoDlflmgKS8hehuVZxU5Zpk"
+REACT_APP_authDomain="commongg-6cb2a.firebaseapp.com"
+REACT_APP_databaseURL="https://commongg-6cb2a.firebaseio.com"
+REACT_APP_projectId="commongg-6cb2a"
+REACT_APP_storageBucket="commongg-6cb2a.appspot.com"
+REACT_APP_messagingSenderId="243224311903"
+REACT_APP_appId="1:243224311903:web:d228f47b351dc5545e03ea"
+REACT_APP_measurementId="G-DGZ9FL4H52"
 
 CLIENT_ID="0r50vc5jeamzsgri5va02r2e75yi72"
 CLIENT_SECRET="20o5iaceu3746hq2mb5z4dls535dqv"
