--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^8.2.1",
     "fontsource-overpass": "^4.0.0",
     "jquery": "^3.5.1",
+    "legacy": "^0.0.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-typeahead": "^5.1.4",
