--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "^17.0.1",
     "react-image-crop": "^8.6.6",
+    "react-imgix": "^9.0.3",
     "react-linkify": "^1.0.0-alpha",
     "react-on-screen": "^2.1.1",
     "react-router": "^5.2.0",
