--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.0",
     "bad-words": "^3.0.4",
     "bootstrap": "^4.5.3",
+    "bootstrap-icons": "^1.3.0",
     "compress.js": "^1.1.2",
     "dotenv": "^8.2.0",
     "firebase": "^8.2.1",
@@ -16,6 +17,7 @@
     "legacy": "^0.0.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-icons": "^1.3.0",
     "react-bootstrap-typeahead": "^5.1.4",
     "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
