--- a/.gitignore
+++ b/.gitignore
@@ -20,13 +20,14 @@ database.rules.json
 .firebase/hosting.YnVpbGQ.cache
 
 # misc
-.DS_Store
 .env
 .env.local
 .env.development.local
+.env.development
 .env.test.local
+.env.test
 .env.production.local
-.env.prod
+.env.production
 
 debug.log
 npm-debug.log*
