--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap-typeahead": "^5.1.4",
     "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
+    "react-google-login": "^5.2.2",
     "react-image-crop": "^8.6.6",
     "react-imgix": "^9.0.3",
     "react-linkify": "^1.0.0-alpha",
